@@ -2,6 +2,12 @@
 
         Reviewed by Mark Rowe.
 
+        * Scripts/modules/scm.py: Fix commit_with_message to return the commit output.
+
+2009-06-23  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Mark Rowe.
+
         * Scripts/modules/scm.py: Fix error seen when commiting r44979.
 
 2009-06-18  Eric Seidel  <eric@webkit.org>
